--- a/index.html
+++ b/index.html
@@ -8,6 +8,6 @@
   </head>
   <body>
       <p>Hello Javascript</p>
-    <script src="class.js"></script>
+    <script src="copyWithin.js"></script>
   </body>
 </html>
