new code push and modify

--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
   </head>
   <body>
       <p>Hello Javascript</p>
-    <script src="copyWithin.js"></script>
+    <script src="OOP/getterSetter.js"></script>
+    
   </body>
 </html>
